--- a/templates/mentor_results.html
+++ b/templates/mentor_results.html
@@ -429,7 +429,7 @@
           <tbody>
             {% for row in results_data %}
             <tr>
-              <td class="student-name"> {{ row.student_name }}</td>
+              <td class="student-name"> {{ row.name }}</td>
               <td class="student-email">{{ row.student_email }}</td>
               <td class="answers-cell"><pre>{{ row.results }}</pre></td>
               <td class="ai-feedback">{{ row.ai_feedback }}</td>
