--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -130,6 +130,13 @@
       overflow-y: auto;
     }
     
+    .container {
+      display: grid;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+
     .header {
       display: flex;
       justify-content: space-between;
@@ -501,6 +508,7 @@
     
     <!-- Main Content -->
     <div class="main-content">
+    <div class = "container">
       <div class="header">
         <h1>Student Dashboard</h1>
         <div id="currentDate"></div>
@@ -553,6 +561,7 @@
 
         </div>
       </div>
+    </div>
     </div>
   </div>
 
