--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -532,9 +532,10 @@
           </div>
           
           <h3>AI Feedback:</h3>
-          <div class="feedback-container">
+          <div class="feedback-container" style="white-space: pre-wrap; font-family: monospace;">
             {{ results.ai_feedback }}
           </div>
+          
         </div>
       </div>
       {% endif %}
